# handbook

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  LICENSE_INFO.md  Makefile  README.md  conda-lock.yml  go.mod  go.sum  hugo.yaml  mkdocs.yml  notify_poetry_of_conda.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  pages.yaml
content/: _index.md
content/people/: _index.md
content/people/scope/: _index.md
content/people/scope/apprentice/: _index.md
content/people/scope/associate/: _index.md
content/people/scope/director/: _index.md
content/people/scope/fellow/: _index.md
content/people/scope/visitor/: _index.md
handbook/: CNAME  index.md
handbook/code/python/: managing-environments.md
handbook/css/: extra.css  progress-bar.css
handbook/documentation/: formatting.md
handbook/education/: index.md
handbook/handbook/: index.md  local-build.md
handbook/internal/: confidentiality.md  index.md
handbook/mentoring/: index.md
handbook/organization/: index.md
handbook/organization/people/readmes/: alex-maldonado.md  steve-cheney.md
handbook/organization/ranks/: 1-intern.md  5-director.md  index.md
handbook/organization/roles/leadership/: dri.md
handbook/organization/scope/: 1-visitor.md  2-apprentice.md  3-associate.md  4-fellow.md  index.md
handbook/organization/teamops/: index.md
handbook/organization/teamops/all-remote/: remote-manifesto.md  what-is-all-remote.md
handbook/organization/teamops/shared-reality/: collaboration-guidelines.md  inclusivity.md  index.md  informal-communication.md  public-by-default.md  shared-values.md  ssot.md
handbook/organization/toolchain/project-management/: plane.md
handbook/organization/toolchain/style-guides/: index.md  markdown-style-guide.md  python-style-guide.md
handbook/projects/jtbd/: index.md  scope.md
handbook/projects/personas/types/: graduate-student.md
handbook/projects/readmes/: index.md  simulint.md
handbook/reference/: index.md  local-build.md
handbook/research/: index.md
handbook/research/software/: index.md  project-template.md
handbook/science/: index.md
handbook/stylesheets/: extra.css
handbook/toolchain/software/: managing-environments.md
(+4 files in other folders)
