[tool.poetry]
name = "handbook-oasci"
version = "2023.10.15"
description = ""
authors = ["Alex M. Maldonado <alex@oasci.org>"]
readme = "README.md"
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.4.0"
mkdocs-material = "^9.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
