[tool.poetry]
name = "handbook-oasci"
version = "2023.10.15"
description = ""
authors = ["Alex M. Maldonado <alex@oasci.org>"]
readme = "README.md"
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.4.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
material-plausible-plugin = "^0.2.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"
mkdocs-git-committers-plugin-2 = "^1.2.0"
mkdocs-git-authors-plugin = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
