[tool.poetry]
name = "handbook-oasci"
version = "2023.10.15"
description = ""
authors = [
    "OASCI",
]
readme = "README.md"
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.4.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
material-plausible-plugin = "^0.2.0"
mkdocs-git-committers-plugin-2 = "^1.2.0"
pymdown-extensions = "^10.3.1"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

["tool.poetry.group.conda.dependencies"]
brotlipy = "^0.7.0"
certifi = "^2023.7.22"
cffi = "^1.15.1"
charset-normalizer = "^2.0.4"
conda = "^23.9.0"
conda-content-trust = "^0.1.3"
conda-libmamba-solver = "^23.9.2"
conda-package-handling = "^2.2.0"
conda_package_streaming = "^0.9.0"
cryptography = "^39.0.1"
idna = "^3.4"
jsonpatch = "^1.32"
jsonpointer = "^2.1"
libmambapy = "^1.5.1"
packaging = "^23.1"
pip = "^23.1.2"
pluggy = "^1.0.0"
pycosat = "^0.6.6"
pycparser = "^2.21"
pyOpenSSL = "^23.2.0"
PySocks = "^1.7.1"
requests = "^2.31.0"
"ruamel.yaml" = "^0.17.21"
setuptools = "^67.8.0"
six = "^1.16.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tqdm = "^4.65.0"
truststore = "^0.8.0"
urllib3 = "^1.26.16"
wheel = "^0.38.4"
zstandard = "^0.19.0"
